Fixed margins on header and nav regions, logo margin on mobile widths.

--- a/zenawenga2/sass/customs/_pages.scss
+++ b/zenawenga2/sass/customs/_pages.scss
@@ -12,7 +12,6 @@
 	position: relative;
 	z-index:0;
   min-height: 7.5em;
-  margin-bottom: 2em;
   @media screen and (max-width: $mobile_width) {
     /* Kick-in width from responsive menus module */
     margin-top: 0em;
@@ -27,7 +26,7 @@
   display: block;
   @media screen and (max-width: $mobile_width) {
     width: 100%;
-    margin: 2em 0;
+    margin: 0;
   }
 }
 
@@ -35,6 +34,9 @@
   margin: 0 auto;
   vertical-align: bottom;
   display: block;
+  @media screen and (max-width: $mobile_width) {
+    margin-top: 2em;
+  }
 }
 
 #name-and-slogan /* Wrapper for website name and slogan */ {
